--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ p {
 #container {
 	margin: 0px auto;
 	text-align: left;
-	background: url('images/content_bgcolor.gif') #2f2e2e repeat-x 0px 0px;
+	background: url('images/content_bgcolor.gif') repeat-x 0px 0px;
 	border: #860b09 2px solid;
 
 	width:778px; 
@@ -296,6 +296,7 @@ p {
 	width: 196px;
 	height: 25px;
 	background: url('images/sitesearch_header.gif') no-repeat 50% 100%;
+
 }
 
 #sitesearch {
@@ -331,6 +332,8 @@ p {
 	clear: left;
 	float: left;
 	width: 774px;
+	background: #303030 ;
+	margin-top: 50px;
 }
 
 
@@ -347,6 +350,7 @@ p {
 
 .content_header {
 	background: url('images/content_header_bg.gif') repeat-x 0px 0px;
+
 }
 
 .content_entry {
@@ -392,6 +396,7 @@ p {
 	width: 142px;
 	height: 20px;
 	background: url('images/reviews_header.gif') no-repeat 0px 0px;
+
 }
 
 #reviews .content_entry {
@@ -447,4 +452,81 @@ p {
 
 #page_footer a:hover {
 	color: #bb1414;
+}
+
+/*Hecho desde 0 por Javier*/
+.boton {
+	display: inline-block;
+
+}
+
+.letraMenu {
+	padding-right: 35px;
+	padding-left: 35px;
+	display: inline-block;
+	padding-bottom: 8px;
+	padding-top: 8px;
+	background: #860b09;
+	margin-bottom: 15px;
+	margin-left: 10px;
+	margin-right: 10px;
+	font-size: 12px;
+	border-radius: 8px;
+	cursor:pointer;
+}
+.letraMenu:hover {
+	color: white;
+	background: #c71212; 
+}
+
+.imagen-banner {
+	display: inline-block;
+	width: 500px;
+	margin-left: 60px;
+	margin-top: 20px;
+	margin-right: 10px;
+
+}
+
+/*estilo plantilla 1*/
+.titulo-top {
+	margin-top: 20px;
+}
+.titulo-juego {
+	margin-left: 50px;
+	padding-bottom: 8px;
+	padding-left: 30px;
+	padding-top: 8px;
+	background: #7B0E0E;
+	margin-right: 400px;
+	border-radius: 8px;
+	margin-top: 50px;
+	margin-bottom: 50px;
+
+}
+.titulo-juego:hover {
+	color: white;
+	background: #c71212; 
+}
+	
+.imagenJuego {
+	width: 550px;
+	margin-left: 110px;
+	border-radius: 3px;
+}
+
+
+
+.descripcionJuego {
+	background: #222222;
+	margin-bottom: 100px;
+	margin-left: 15px;
+	margin-right: 15px;
+	margin-top: 20px;
+	padding-right: 30px;
+	padding-left: 30px;
+	padding-bottom: 15px;
+	padding-top: 15px;
+	border-radius: 8px;
+	font-size: 12px;
 }
