--- a/style.css
+++ b/style.css
@@ -534,3 +534,23 @@ p {
 	width: 500px;
 	height: 100px;	
 }
+.boton-plantilla2 {
+	padding-right: 35px;
+	padding-left: 35px;
+	display: inline-block;
+	padding-bottom: 8px;
+	padding-top: 8px;
+	background: #860b09;
+	margin-bottom: 15px;
+	margin-left: 50px;
+	margin-right: 10px;
+	font-size: 12px;
+	border-radius: 8px;
+	cursor:pointer;
+	margin-top: 20px;
+}
+.titulo-top-plantilla2 {
+	margin-top: 20px;
+	margin-left: 50px;
+	margin-bottom: 50px;
+}
